tests/paczka2/big_fuzzy/58275338.err
Error in line 7: UA9Zi A550 86,7
Error in line 11: UA9Zi A46 32,1
Error in line 16: 7rIOL3drSh A550 60,9
Error in line 31: 7rIOL3drSh A46 77,6
Error in line 39: JO0 A46 15,78
Error in line 30: JO0 S962 45,7
Error in line 45: A46 A46 -1,4
Error in line 46: A46 A46 13,80
Error in line 44: JO0 S968 22,7
Error in line 41: 7rIOL3drSh S968 7,7
Error in line 52: 7rIOL3drSh A550 97,90
Error in line 47: JO0 A550 14,1
Error in line 58: lCA2D4jMbc A46 86,0
Error in line 56: UA9Zi S962 70,8
Error in line 49: 7rIOL3drSh A550 30,8
Error in line 67: 7rIOL3drSh S968 32,1
Error in line 82: HZj0bwiDGB S962 52,6
Error in line 85: MvHN8JcZ S962 75,6
Error in line 65: UA9Zi A46 9,5
Error in line 88: MvHN8JcZ A46 204,0
Error in line 92: MvHN8JcZ A550 19,1
Error in line 103: lCA2D4jMbc A550 35,4
Error in line 107: UA9Zi A550 2,8
Error in line 132: lCA2D4jMbc A550 25,43
Error in line 136: MvHN8JcZ S962 29,8
Error in line 131: JO0 A550 255,8
Error in line 125: lCA2D4jMbc A550 64,9
Error in line 143: lCA2D4jMbc S962 6,4
Error in line 148: UA9Zi S968 157,4
Error in line 150: UA9Zi A46 69,9
Error in line 151: 7rIOL3drSh S968 3,9
Error in line 155: 7rIOL3drSh A550 51,4
Error in line 145: lCA2D4jMbc A550 92,0
Error in line 158: lCA2D4jMbc S968 4,0
Error in line 165: lCA2D4jMbc A550 13,4
Error in line 157: 7rIOL3drSh S962 67,7
Error in line 167: 7rIOL3drSh A550 28,9
Error in line 169: 7rIOL3drSh S962 48,5
Error in line 139: HZj0bwiDGB S968 176,9
Error in line 178: lCA2D4jMbc A55. 15,.
Error in line 168: JO0 A46 77,0
Error in line 180: HZj0bwiDGB A46 54,27
Error in line 175: HZj0bwiDGB S962 57,1
Error in line 183: A46 S962 70,2
Error in line 187: HZj0bwiDGB A46 42,7
Error in line 186: MvHN8JcZ A550 32,4
Error in line 195: UA9Zi A46 71,1
Error in line 166: lCA2D4jMbc A46 17,4
Error in line 199: lCA2D4jMbc A550 7,8
Error in line 206: A46 A46 66,1
Error in line 213: A46 S962 21,2
Error in line 212: 7rIOL3drSh S968 0,0
Error in line 224: A46 S968 55,05
Error in line 235: JO0 A46 14,7
Error in line 234: HZj0bwiDGB A46 80,2
Error in line 228: lCA2D4jMbc A550 98,9
Error in line 245: lCA2D4jMbc S968 57,5
